# vibecoding-pong

./: .gitignore  README.md  env  prd.md  pyproject.toml
pong/: main.py
pongweb/: index.html  main.js  style.css
