[tool.poetry]
name = "pong-game"
version = "1.0.0"
description = "A simple Pong game implemented in Python using Pygame."
authors = ["Robert Boivin <poivronjaune@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
pygame = "^2.0"

[[tool.poetry.packages]]
include = "pong"
from = "."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
